# distroless_sh_bug

./: .travis.yml  BUILD.bazel  README.md  WORKSPACE  bazel_0.5.4-linux-x86_64.deb.sha256
hello/: BUILD.bazel  hello.go
