load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")


go_binary(
    name = "hello",
    visibility = ["//visibility:public"],
    srcs = ["hello.go"],
)

docker_build(
    name = "prod",
    base = "@base//image:image.tar",
    cmd = "./hello",
    repository = "distroless_sh_bug",
    files = [
        ":hello",
    ],
    ports = ["8080"],
)

docker_build(
    name = "use_ext",
    base = "@distroless//base:base",
    cmd = "./hello",
    repository = "distroless_sh_bug",
    files = [
        ":hello",
    ],
    ports = ["8080"],
)
