load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary", "go_test")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build")


go_binary(
    name = "hello",
    visibility = ["//visibility:public"],
    deps = ["@com_github_mattn_go_sqlite3//:go_default_library"],
    srcs = ["hello.go"],
)

docker_build(
    name = "prod",
    base = "@base//image:image.tar",
    entrypoint = ["./hello"],
    files = [
        ":hello",
    ],
    ports = ["8080"],
)
